RPS.css
       body {
        display: grid;
        place-items: center;
        margin: 0;
            background-color:black;
            color: white;
            font-family: Arial, Helvetica, sans-serif;
            justify-content: center;
        }
        .title {
            color: aliceblue;
            font-size: 40px;
            margin-top: 10px;
            font-weight: bold;

        }

        .rock, .paper, .scissors {
            width: 120px;
            height: 120px;
            margin-right: 10px;
            border-radius: 100px;
            border-width: 2px;
            border-style: solid;
            border-color: white;
            background-color: black;
            cursor: pointer;
        }

       img {
        width: 60px;
       }

        .js-result {
            color: white;
            font-size: 25px;
            font-family: Arial, Helvetica, sans-serif;
            font-weight: bold;
            margin-top:50px;
            margin-bottom: 10px;
            

        }

        .move-css {
            color: white;
            font-size: 20px;
            font-family: Arial, Helvetica, sans-serif;
            margin-bottom: 15px;
            margin-top: 30px;
            padding-top: 10px;
            padding-bottom: 60px;
        }

        .score-css {
             color: white;
            font-size: 20px;
            font-family: Arial, Helvetica, sans-serif;
            margin-top: 10px;
        }

        .reset-button {
            background-color: white;
            border: none;
            font-size: 15px;
            padding: 8px 15px; 
            cursor: pointer;
        }

        @media (max-width: 600px) {
            .title{
                font-size: 28px;
                text-align: center;
            }

            button {
                width: 80px;
                height: 80px;
            }

            img {
                width: 40px;
            }

            .js-score {
                font-size: 14px;
                text-align: center;
            }

            body{
                text-align: center;
                padding: 20px;
            }
        }

